Refactor build process and dynamic loading using rspack
In this commit, the build and serve process of the applications is overhauled to use rspack as the main tool instead of webpack-cli. The relevant scripts in package.json files of the three apps are modified accordingly. Additionally, functionality is added to perform dynamic remote loading of modules, in a manner that avoids redundant loading of modules that have already been pulled in once using module-federation runtime.

--- a/dynamic-system-host/app3/package.json
+++ b/dynamic-system-host/app3/package.json
@@ -9,11 +9,16 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "0.4.5-canary-ac74516-20240102083734",
+    "@rspack/cli": "0.4.5-canary-ac74516-20240102083734",
+    "@rspack/dev-server": "0.4.5-canary-ac74516-20240102083734"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve",
+    "build": "rspack --mode production",
+    "legacy:start": "webpack-cli serve",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 3003",
     "clean": "rm -rf dist"
   },
