--- a/dynamic-system-host/app1/package.json
+++ b/dynamic-system-host/app1/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@module-federation/utilities": "^1.4.0",
+    "@module-federation/runtime": "next",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   }
