Implement rspack in various component npm scripts
The commit updates federated components to run and build with the 'rspack' tool in addition to webpack. The dependency '@rspack/core', '@rspack/cli', and '@rspack/dev-server' are added in each component's package.json, and the npm scripts 'start' and 'build' are adjusted to use 'rspack'. This is meant to extend the configuration capabilities beyond what 'webpack' offers. Meanwhile, for backward compatibility, legacy 'webpack' scripts are kept under 'legacy:start' and 'legacy:build'.

--- a/federated-css/expose-remotes/expose-css/package.json
+++ b/federated-css/expose-remotes/expose-css/package.json
@@ -9,11 +9,16 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve",
+    "legacy:start": "webpack-cli serve",
+    "build": "rspack --mode production",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 4000",
     "clean": "rm -rf dist"
   },
