--- a/federated-css/expose-remotes/expose-tailwind-css-module/package.json
+++ b/federated-css/expose-remotes/expose-tailwind-css-module/package.json
@@ -10,11 +10,16 @@
     "tailwindcss": "3.3.6",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "^0.4.5",
+    "@rspack/cli": "^0.4.5",
+    "@rspack/dev-server": "^0.4.5"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve",
+    "legacy:start": "webpack-cli serve",
+    "build": "rspack --mode production",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 4007",
     "clean": "rm -rf dist"
   },
