--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -2,6 +2,7 @@
   "version": "1.2.3",
   "private": true,
   "name": "federated-css-mono",
+  "description": "Examples Federating Styles",
   "scripts": {
     "build": "pnpm --filter federated-css-mono_* --parallel build",
     "clean": "pnpm --filter federated-css-mono_* --parallel clean",
