Disable specific E2E tests and update e2e:ci script
Some E2E tests related to color and background attributes have been temporarily disabled in the checkApplications.cy.ts file. Also, the e2e:ci script in the package.json file has been modified to run without needing the application to be started beforehand. These changes aim to facilitate the debugging process in specific scenarios.

--- a/css-isolation/package.json
+++ b/css-isolation/package.json
@@ -10,7 +10,7 @@
     "legacy:build": "pnpm --filter css-isolation_app* --parallel legacy:build",
     "serve": "pnpm --filter css-isolation_app* --parallel serve",
     "clean": "pnpm --filter css-isolation_app* --parallel clean",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
+    "e2e:ci": "npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
     "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
