Refine package descriptions in multiple projects
Updated the descriptions in the 'package.json' files for multiple projects to be more concise and straight-to-the-point. These edited descriptions still cover the key details such as the tools and techniques used but in a more succinct manner. This should make it easier for users to quickly understand the core purpose of each project.

--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -6,7 +6,7 @@
     "./app3"
   ],
   "private": true,
-  "description": "Dynamic Remote Vendor Sharing Example is a basic demonstration of a host application loading remote components and dynamically sharing vendor code among unknown remotes.",
+  "description": "Basic demo of a host app loading remote components and dynamically sharing vendor code with unknown remotes, or without a Federation Plugin",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter dynamic-remotes_app* --parallel start",
