--- a/angular14-react/package.json
+++ b/angular14-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular14-react",
-  "description": "This project shows an example of using Webpack 5 Module Federation for Angular `14.2.0` app with injected remote React `18.2.0` module. NGXS state management is used in Angular app, state is shared between Angular app and React module. Angular app was developed based on the example `angular11-microfrontends-ngxs`.",
+  "description": "Module Federation for Angular 14 and React 18 apps, with NGXS state management and shared state between Angular and React modules.",
   "workspaces": [
     "./angular-profile",
     "./react-user-list"
