--- a/angular15-microfrontends-lazy-components/package.json
+++ b/angular15-microfrontends-lazy-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular15-microfrontends-lazy-components",
-  "description": "This project shows an example of using Webpack 5 Module Federation with Angular `15.0.4` using shared module and NGXS state management.",
+  "description": "Module Federation with Angular 15, featuring shared modules and NGXS state management",
   "private": true,
   "version": "0.0.0",
   "scripts": {
