Add `description` to federated-library-from-cdn package and refine other packages' descriptions
This commit updates the package descriptions in the federated-library-from-cdn, css-isolation, federated-npm, and bi-directional packages. The aim is to make the descriptions more concise while still conveying the key features and content of each package. This makes it easier for users to quickly understand each package's purpose.

--- a/federated-library-from-cdn/package.json
+++ b/federated-library-from-cdn/package.json
@@ -1,5 +1,6 @@
 {
   "name": "federated-library-from-cdn",
+  "description": "Basic example of two applications that share the same library served from a CDN.",
   "private": true,
   "workspaces": [
     "./app1",
