Update package.json in multiple projects
This commit adds the `ignored` attribute to three packages: loadable-react-16, medusa-delegate-example, and loadable-react-18. In addition, the `description` field is added to the medusa-example package. Such changes contribute to the improvement of information clarity about packages.

--- a/loadable-react-16/package.json
+++ b/loadable-react-16/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loadable-react-16",
+  "ignored": true,
   "version": "0.0.1",
   "scripts": {
     "start": "pnpm --filter loadable-react-16_* --parallel start",
