--- a/loadable-react-18/package.json
+++ b/loadable-react-18/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loadable-react-18",
+  "ignored": true,
   "version": "0.0.1",
   "scripts": {
     "start": "pnpm --filter loadable-react-18_* --parallel start",
