--- a/medusa-example/package.json
+++ b/medusa-example/package.json
@@ -1,5 +1,6 @@
 {
   "name": "medusa-example",
+  "description": "https://medusa.codes Demo",
   "private": true,
   "version": "0.0.0",
   "scripts": {
