Add 'ignored' attribute to package.json files
The 'ignored' attribute was added to the package.json files of both 'native-federation-react' and 'modernjs-medusa' projects. This attribute helps exclude specific packages when running bulk operations in the workspace.

--- a/modernjs-medusa/package.json
+++ b/modernjs-medusa/package.json
@@ -2,6 +2,7 @@
   "name": "modernjs-medusa",
   "private": true,
   "version": "1.0.0",
+  "ignored": true,
   "scripts": {
     "start": "concurrently \"cd ./host && npm run dev\" \"cd ./provider && npm run dev\"",
     "build": "concurrently \"cd ./host && pnpm build\" \"cd ./provider && pnpm build\"",
