Updated package.json with descriptions
All package.json files across various modules have been updated with appropriate descriptions for better understanding. Also, an "ignored" key has been added to native-federation-tests-typescript-plugins/package.json. These changes will help provide clarity and context about the purpose and functionality of each module.

--- a/nested/package.json
+++ b/nested/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nested",
+  "description": "Demonstration of loading nested remote components: 'app1' (host) async loads 'ButtonContainer' from 'app2', which in turn async loads 'Button' from 'app3'.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
