--- a/nextjs-react/package.json
+++ b/nextjs-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "Module Federation with NextJS and Client-Side React Remotes",
   "private": true,
   "workspaces": [
     "host-app",
