--- a/nextjs-ssr-react-query/package.json
+++ b/nextjs-ssr-react-query/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nextjs-ssr-react-query",
+  "description": "Server Side Rendering with Next.js and React Query",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
