--- a/nextjs-ssr/package.json
+++ b/nextjs-ssr/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nextjs-ssr",
+  "description": "Server Side Rendering with Next.js",
   "private": true,
   "version": "0.0.0",
   "scripts": {
