--- a/modernjs/package.json
+++ b/modernjs/package.json
@@ -1,5 +1,6 @@
 {
   "name": "modernjs",
+  "description": "Module Federation Example for ByteDance's Modern.js Framework.",
   "private": true,
   "version": "1.0.0",
   "scripts": {
