--- a/comprehensive-demo-react16/app-01/package.json
+++ b/comprehensive-demo-react16/app-01/package.json
@@ -1,5 +1,6 @@
 {
   "name": "comprehensive-demo-react16_app-01",
+  "ignored": true,
   "version": "0.0.0",
   "description": "ReactJS - acts as the app shell plus is an aggregation with other remotes",
   "dependencies": {
