--- a/comprehensive-demo-react16/app-03/package.json
+++ b/comprehensive-demo-react16/app-03/package.json
@@ -2,6 +2,7 @@
   "name": "comprehensive-demo-react16_app-03",
   "description": "ReactJS",
   "version": "0.0.0",
+  "ignored": true,
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
