--- a/comprehensive-demo-react16/app-05/package.json
+++ b/comprehensive-demo-react16/app-05/package.json
@@ -1,6 +1,7 @@
 {
   "name": "comprehensive-demo-react16_app-05",
   "version": "1.0.0",
+  "ignored": true,
   "description": "LitElement setup with TypeScript",
   "scripts": {
     "legacy:build": "cross-env NODE_ENV=production webpack",
