Add "ignored" attribute to various package.json files
The "ignored" attribute has been added to the package.json files of multiple applications to enhance workflow efficiency. This update is intended to exclude certain applications during specified operations, streamlining project management and reducing unnecessary operations.

--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -2,6 +2,7 @@
   "name": "comprehensive-demo-react18_app-04",
   "description": "SvelteJS",
   "version": "1.0.0",
+  "ignored": true,
   "devDependencies": {
     "cross-env": "7.0.3",
     "css-loader": "6.8.1",
