--- a/different-react-versions-16-18/app1/package.json
+++ b/different-react-versions-16-18/app1/package.json
@@ -1,6 +1,7 @@
 {
   "name": "different-react-versions-16-18_app1",
   "description": "React 16",
+  "ignored": true,
   "version": "0.0.0",
   "devDependencies": {
     "@babel/core": "7.23.5",
