--- a/different-react-versions-16-18/app2/package.json
+++ b/different-react-versions-16-18/app2/package.json
@@ -2,6 +2,7 @@
   "name": "different-react-versions-16-18_app2",
   "description": "React 18",
   "version": "0.0.0",
+  "ignored": true,
   "devDependencies": {
     "@babel/core": "7.23.5",
     "@babel/plugin-proposal-class-properties": "7.18.6",
