--- a/different-react-versions/app1/package.json
+++ b/different-react-versions/app1/package.json
@@ -1,5 +1,6 @@
 {
   "name": "different-react-versions_app1",
+  "ignored": true,
   "description": "Uses React 16.6.3 (before react hooks existed)",
   "version": "0.0.0",
   "devDependencies": {
