--- a/different-react-versions/app2/package.json
+++ b/different-react-versions/app2/package.json
@@ -1,6 +1,7 @@
 {
   "name": "different-react-versions_app2",
   "description": "Uses React 16.14.0 (react hooks exist)",
+  "ignored": true,
   "version": "0.0.0",
   "devDependencies": {
     "@babel/core": "7.23.5",
