--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -2,6 +2,7 @@
   "name": "comprehensive-demo-react18_app-01",
   "description": "ReactJS - acts as the app shell plus is an aggregation with other remotes",
   "version": "0.0.0",
+  "ignored": true,
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
