--- a/comprehensive-demo-react18/app-05/package.json
+++ b/comprehensive-demo-react18/app-05/package.json
@@ -2,6 +2,7 @@
   "name": "comprehensive-demo-react18_app-05",
   "description": "LitElement setup with TypeScript",
   "version": "1.0.0",
+  "ignored": true,
   "scripts": {
     "build": "cross-env NODE_ENV=production rspack build --mode production",
     "legacy:build": "cross-env NODE_ENV=production webpack",
