--- a/different-react-versions-16-17-typescript/app1/package.json
+++ b/different-react-versions-16-17-typescript/app1/package.json
@@ -1,6 +1,7 @@
 {
   "name": "different-react-versions-16-17-typescript_app1",
   "description": "React 16",
+  "ignored": true,
   "version": "0.0.0",
   "scripts": {
     "start": "rspack serve",
