--- a/frontend-discovery-service/package.json
+++ b/frontend-discovery-service/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "frontend-discovery-service-module-federation-example",
+  "name": "frontend-discovery-service",
+  "description": "Demonstrates running Micro Frontends with Module Federation and Frontend Service Discovery on AWS, including Blue/Green deployment for version updates.",
   "private": true,
   "scripts": {
     "build": "npm run build --workspaces",
