Add 'ignored' field to package.json
An 'ignored' field has been added to the package.json file of the "medusa-nx-native-federation-example" project. This addition helps to indicate the packages that can be ignored during certain processes, improving the efficiency of package management.

--- a/medusa-nx-native-federation-example/package.json
+++ b/medusa-nx-native-federation-example/package.json
@@ -2,6 +2,7 @@
   "name": "medusa-nx-native-federation-example",
   "version": "1.0.0",
   "license": "MIT",
+  "ignored": true,
   "private": true,
   "scripts": {
     "dsl:build": "npx nx run dsl:build --verbose",
