Add descriptions and 'ignored' field to multiple package.json files
Descriptions have been added to package.json files for better package understanding. An 'ignored' field has also been introduced in some package.json files of the "quasar-cli-vue3-webpack-javascript" project to indicate packages that can be bypassed during certain processes, thereby enhancing package management efficiency.

--- a/nextjs-v13/package.json
+++ b/nextjs-v13/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nextjs-v13",
   "private": true,
+  "description": "Next.js 13 Example",
   "workspaces": [
     "./checkout",
     "./home",
