--- a/quasar-cli-vue3-webpack-javascript/app-general/package.json
+++ b/quasar-cli-vue3-webpack-javascript/app-general/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app-remote",
   "version": "0.0.1",
+  "ignored": true,
   "description": "A Quasar Project",
   "productName": "Quasar App",
   "author": "kama7 <kamalpratap95@gmail.com>",
