--- a/react-16-17-18-ssr/package.json
+++ b/react-16-17-18-ssr/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-16-17-18-ssr",
+  "description": "React 16, 17, 18 SSR",
   "private": true,
   "version": "0.0.0",
   "scripts": {
