--- a/react-18-server-2-server/package.json
+++ b/react-18-server-2-server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-18-server-2-server",
+  "description": "Server 2 Server React 18",
   "private": true,
   "version": "0.0.0",
   "scripts": {
