--- a/react-18-code-splitting/package.json
+++ b/react-18-code-splitting/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-18-code-splitting",
+  "description": "React 18 Code Splitting",
   "private": true,
   "version": "0.0.0",
   "scripts": {
