Update package.json and remove cypress.env.json file
Made several modifications to package.json files, including the addition of descriptions and an 'ignored' field. These changes improve the readability and package management efficiency. Additionally, the cypress.env.json file has been removed as it's no longer needed.

--- a/react-in-vue/package.json
+++ b/react-in-vue/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-in-vue",
+  "description": "Demo of fetching a React component in a Vue app via Module Federation, showcasing two-way communication and lifecycle management.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
