--- a/react-storybook/package.json
+++ b/react-storybook/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "rsbook",
+  "name": "react-storybook",
+  "description": "Storybook Example",
   "private": true,
   "version": "0.0.1",
   "workspaces": {
