--- a/react-livereload/package.json
+++ b/react-livereload/package.json
@@ -2,7 +2,7 @@
   "name": "react-hmr",
   "private": true,
   "version": "1.0.0",
-  "description": "experiments with module federation in React with Webpack5",
+  "description": "LiveReload with a React app",
   "main": "index.js",
   "repository": "https://github.com/burhanuday/module-federation-with-react",
   "author": "burhanuday",
