Add description to rspack_webpack and remove from app-05 package.json
This commit introduces a detailed description to the rspack_webpack's package.json file, clarifying the purpose and structure of the software. At the same time, it removes the description from the app-05's package.json, as it was deemed irrelevant or redundant. These changes aim to enhance accurate communication about the software's functionality and overall cleanup.

--- a/rspack-webpack-interop/package.json
+++ b/rspack-webpack-interop/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rspack_webpack",
   "version": "0.0.0",
+  "description": "Webpack Host with [Rspack](https://rspack.dev) Remotes: App #1 as Webpack, Apps #2-#5 as [Rspack](https://rspack.dev), with coexisting webpack commands.",
   "scripts": {
     "start": "pnpm build && pnpm serve",
     "legacy:start": "pnpm legacy:build && pnpm serve",
