Update package.json in rspack-webpack-offload
This commit adds a description to the package.json file in the rspack-webpack-offload package. This is being done in order to clearly define the purpose and functionality of the package. It will allow users and developers to better understand how this package is used in the overall project.

--- a/rspack-webpack-offload/package.json
+++ b/rspack-webpack-offload/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rspack_offload",
   "private": true,
+  "description": "Speed up Webpack by offloading some workload to [rspack](https://rspack.dev)",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter rspack_offload_* --parallel start",
