Add description to runtime-plugins package.json files
A description has been added to two package.json files within the runtime-plugins package. The update includes a definition for the "runtime-plugins" and an explanation for "control-sharing" functionality. This enhancement enhances clarity on the purpose and usage of these packages in the overall project.

--- a/runtime-plugins/control-sharing/package.json
+++ b/runtime-plugins/control-sharing/package.json
@@ -4,6 +4,7 @@
     "./app1",
     "./app2"
   ],
+  "description": "Control Sharing Panel. Lets you change share resolver in the app via GUI",
   "private": true,
   "version": "0.0.0",
   "scripts": {
