xAdd description to rust-wasm and self-healing package.json files
Added descriptions to the rust-wasm and self-healing package.json files. The descriptions provide a brief explanation about the usage and purpose of these packages; the rust-wasm is about module federation of Wasm modules, using the Conway's Game of Life example, while the self-healing demonstrates self-healing capabilities with Module Federation.

--- a/rust-wasm/package.json
+++ b/rust-wasm/package.json
@@ -2,6 +2,7 @@
   "name": "rust-wasm",
   "private": true,
   "version": "1.0.0",
+  "description": "Using Module Federation to federate Wasm modules across independent applications. In this demo, we will use Conways Game of Life to illustrate how Wasm can be shared.",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
