xAdd description to rust-wasm and self-healing package.json files
Added descriptions to the rust-wasm and self-healing package.json files. The descriptions provide a brief explanation about the usage and purpose of these packages; the rust-wasm is about module federation of Wasm modules, using the Conway's Game of Life example, while the self-healing demonstrates self-healing capabilities with Module Federation.

--- a/server-side-render-only/package.json
+++ b/server-side-render-only/package.json
@@ -2,6 +2,7 @@
   "name": "server-side-render-only",
   "private": true,
   "version": "0.0.0",
+  "description": "Module Federation Server Side Rendering, no client side implementation",
   "scripts": {
     "start": "concurrently \"npm run buildHost\" \"npm run startHost\" \"npm run buildRemote\" \"npm run startRemote\"",
     "buildHost": "webpack --config=hostServer/webpack.config.js -w",
