--- a/shared-context/package.json
+++ b/shared-context/package.json
@@ -2,6 +2,7 @@
   "name": "shared-context",
   "private": true,
   "version": "0.0.0",
+  "description": "This example demos a host application wrapped in a ContextProvider and renders a remote component consuming the ContextProvider value.",
   "scripts": {
     "start": "pnpm --filter shared-context_* --parallel start",
     "build": "pnpm --filter shared-context_* build",
