--- a/shared-routes2/package.json
+++ b/shared-routes2/package.json
@@ -2,6 +2,7 @@
   "name": "shared-routes2",
   "private": true,
   "version": "0.0.0",
+  "description": "This example demos two applications with their own sets of routes and deployments but a seamless experience for the user.",
   "scripts": {
     "start": "pnpm --filter shared-routes2_app* --parallel start",
     "build": "pnpm --filter shared-routes2_app* build",
