--- a/shared-routing/package.json
+++ b/shared-routing/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shared-routing",
+  "description": "This example demos a basic host application loading remote component.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
