--- a/styled-components/package.json
+++ b/styled-components/package.json
@@ -1,6 +1,7 @@
 {
   "name": "013-styled-components",
   "version": "0.0.1",
+  "description": "This sample shows how to use [Styled Components](https://www.styled-components.com/) with MF and React SSR.",
   "private": true,
   "workspaces": [
     "app1",
