--- a/third-party-scripts/package.json
+++ b/third-party-scripts/package.json
@@ -1,5 +1,6 @@
 {
   "name": "third-party-scripts",
+  "description": "This example demos a basic host-remote application with third-party remotes or vendor code.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
