--- a/typescript-project-references/package.json
+++ b/typescript-project-references/package.json
@@ -1,5 +1,6 @@
 {
   "name": "typescript-project-references",
+  "description": "This example demos a basic host/remote application with TypeScript using [Project References](https://www.typescriptlang.org/docs/handbook/project-references.html).",
   "private": true,
   "version": "0.0.0",
   "scripts": {
