--- a/typescript-react-fallback/package.json
+++ b/typescript-react-fallback/package.json
@@ -1,5 +1,6 @@
 {
   "name": "typescript-react-fallback",
+  "description": "This example demos a basic host/remote application with TypeScript using [Project References], to show how to render another remote as a fallback if a remote fails to render.",
   "private": true,
   "version": "0.0.0",
   "scripts": {
