--- a/typescript-react-monorepo/package.json
+++ b/typescript-react-monorepo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ts-monorepo",
   "version": "1.0.0",
+  "description": "This example demos a basic host/remote application with TypeScript and also streams types.",
   "license": "MIT",
   "private": true,
   "scripts": {
