--- a/typescript/package.json
+++ b/typescript/package.json
@@ -2,6 +2,7 @@
   "name": "typescript-repo",
   "private": true,
   "version": "0.0.0",
+  "description": "This example demos a basic host/remote application with TypeScript and also streams types.",
   "scripts": {
     "start": "pnpm --filter typescript_* --parallel start",
     "build": "pnpm --filter typescript_* build",
