--- a/vite-react-microfrontends/package.json
+++ b/vite-react-microfrontends/package.json
@@ -6,7 +6,7 @@
     "./remote"
   ],
   "version": "0.0.0",
-  "description": "Vite + Module Federation is now possible",
+  "description": "Vite React Microfrontends",
   "main": "index.js",
   "scripts": {
     "install:deps": "npm --prefix ./host install && npm --prefix ./remote install",
