--- a/vite-svelte-microfrontends/package.json
+++ b/vite-svelte-microfrontends/package.json
@@ -2,7 +2,7 @@
   "name": "vite-svelte-microfrontends",
   "private": true,
   "version": "0.0.0",
-  "description": "Vite + Module Federation is now possible",
+  "description": "Svelte Vite Based Microfrontends",
   "main": "index.js",
   "scripts": {
     "serve": "pnpm --parallel --filter vite-svelte-microfrontends_* dev",
