--- a/vite-vue-microfrontends/package.json
+++ b/vite-vue-microfrontends/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-vue-microfrontends",
   "version": "0.0.0",
-  "description": "Vite + Module Federation is now possible",
+  "description": "Vue Vite Based Microfrontends",
   "main": "index.js",
   "scripts": {
     "serve": "pnpm --filter vite-vue-microfrontends_* --parallel run dev",
