--- a/vue2-in-vue3/package.json
+++ b/vue2-in-vue3/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue2-in-vue3",
+  "description": "This example demos a vue3 application loading remote vue2 component.`vue3` app depends on a component exposed by `vue2` app.",
   "private": true,
   "workspaces": [
     "./vue2",
