--- a/vue3-demo-federation-with-vite/package.json
+++ b/vue3-demo-federation-with-vite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue3-demo-federation-with-vite",
+  "description": "This project is a mix of `webpack-federation` and `vite-federation`",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --parallel --filter vue3-demo-federation-with-vite_* start",
