--- a/vue3-demo-federation-with-vite/webpack-side/package.json
+++ b/vue3-demo-federation-with-vite/webpack-side/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vue3-demo-federation-with-vite_webpack-side",
   "version": "1.0.0",
+  "ignored": true,
+  "description": "A Webpack/Rspack Project",
   "scripts": {
     "start": "webpack-cli serve",
     "serve": "serve dist -p 5001 --cors='*'",
