--- a/vue3-demo/package.json
+++ b/vue3-demo/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue3-demo",
+  "description": "This example demos consumption of federated modules from a Webpack bundle. `layout` app depends on a component exposed by `home` app.",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter vue3-demo_* --parallel start",
