--- a/shared-store-cross-framework/package.json
+++ b/shared-store-cross-framework/package.json
@@ -2,6 +2,7 @@
   "name": "shared-store-cross-framework",
   "private": true,
   "version": "0.0.0",
+  "description": "This example demos a Vue3 in React application which shares the same store.",
   "scripts": {
     "start": "pnpm --filter shared-store-cross-framework_* --parallel start",
     "build": "pnpm --filter shared-store-cross-framework_* build",
