--- a/umd-federation/package.json
+++ b/umd-federation/package.json
@@ -2,7 +2,7 @@
   "name": "umd-federation",
   "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "UMD output target for Module Federation",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
