--- a/vue3-demo-federation-with-vite/vite-side/package.json
+++ b/vue3-demo-federation-with-vite/vite-side/package.json
@@ -1,5 +1,7 @@
 {
   "name": "vue3-demo-federation-with-vite_vite-side",
+  "description": "A Vite project",
+  "ignored": true,
   "version": "1.0.0",
   "scripts": {
     "start": "vite",
