--- a/cypress-e2e/package.json
+++ b/cypress-e2e/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
+  "ignored": true,
   "dependencies": {
     "typescript": "^5.2.2"
   }
