feat: use @module-federation/runtime (#3440)
* feat: use @module-federation/runtime

* fix: e2e on basic host remote

* fix: e2e on bi-directional

* fix: e2e on bi-directional

* fix: e2e on bi-directional

* fix: e2e on bi-directional

* fix: e2e on bi-directional

* feat: add shared in runtime

* lock files

---------

Co-authored-by: 2heal1 <TwoHeal@163.com>
Co-authored-by: ScriptedAlchemy <zackaryjackson@bytedance.com>

--- a/dynamic-system-host/app1/package.json
+++ b/dynamic-system-host/app1/package.json
@@ -26,6 +26,7 @@
     "@module-federation/utilities": "^1.4.0",
     "@module-federation/runtime": "next",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "@module-federation/runtime": "0.0.0-canary-1701694314517"
   }
 }
