--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -12,7 +12,7 @@
     "build": "pnpm --filter basic-host-remote_* run build",
     "serve": "pnpm --filter basic-host-remote_* run serve",
     "clean": "pnpm --filter basic-host-remote_* run reset",
-    "e2e:ci": "pnpm start & sleep 20 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm build && pnpm serve & sleep 60 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
