--- a/dynamic-system-host/app2/package.json
+++ b/dynamic-system-host/app2/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "moment": "^2.29.4",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "@module-federation/runtime": "0.0.0-canary-1701694314517"
   }
 }
