--- a/different-react-versions-typescript/app1/package.json
+++ b/different-react-versions-typescript/app1/package.json
@@ -2,8 +2,10 @@
   "name": "different-react-versions-typescript_app1",
   "version": "0.0.0",
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "legacy:start": "webpack-cli serve",
+    "start": "rspack serve",
+    "legacy:build": "webpack --mode production",
+    "build": "rspack --mode production",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist"
   },
@@ -24,6 +26,9 @@
     "typescript": "4.8.4",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/core": "^0.5.0",
+    "@rspack/cli": "^0.5.0",
+    "@rspack/dev-server": "^0.5.0"
   }
 }
