--- a/nextjs-react/host-app/package.json
+++ b/nextjs-react/host-app/package.json
@@ -2,8 +2,8 @@
   "name": "nextjs-react_host-app",
   "version": "0.1.0",
   "scripts": {
-    "dev": "rm -rf ./.next && NODE_OPTIONS=\"--max_old_space_size=8000\"  next dev",
-    "build": "next build",
+    "dev": "rm -rf ./.next && NEXT_PRIVATE_LOCAL_WEBPACK=true NODE_OPTIONS=\"--max_old_space_size=8000\"  next dev",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start",
     "lint": "next lint"
   },
