--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ buildServer
 **/cypress/report/**
 /federated-express-routes/host/build/
 /federated-express-routes/remote/build/
+/comprehensive-demo-react16/*/public/*.js
+/comprehensive-demo-react16/*/public/*.css
+*.map
+
