Update .gitignore with new paths
Added new entries to .gitignore for JS and CSS files in the comprehensive-demo-react16 public folder. This change prevents unneeded static build files from being tracked and committed to the repository.

--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -6,20 +6,22 @@
   "scripts": {
     "build": "pnpm --filter federated-css-mono_* --parallel build",
     "clean": "pnpm --filter federated-css-mono_* --parallel clean",
-    "start:expose-all": "pnpm --filter @federated-css/{expose-css,expose-css-module --filter expose-jss --filter expose-less --filter expose-scss --filter expose-styled-component --filter expose-tailwind-css-global --filter expose-tailwind-css-module --parallel start",
-    "start:react:css-styled-component": "pnpm --filter @federated-css/css-and-styled-component --parallel start",
-    "start:react:less-scss": "pnpm --filter @federated-css/less-and-scss --parallel start",
-    "start:react:css-module-and-jss": "pnpm --filter @federated-css/css-module-and-jss --parallel start",
-    "start:react:tailwind-global-and-less": "pnpm --filter @federated-css/tailwind-global-and-less --parallel start",
-    "start:react:tailwind-module-and-jss": "pnpm --filter @federated-css/tailwind-module-and-jss --parallel start",
-    "start:react:combination-of-5": "pnpm --filter @federated-css/combination-of-5 --parallel start",
-    "start:react:combination-of-4": "pnpm --filter @federated-css/combination-of-4 --parallel start",
-    "start:react:any-combination": "node ./consumers-react/any-combination/execute.js && pnpm --filter @federated-css/any-combination --parallel start",
+    "start:all": "pnpm --filter federated-css-mono_* --parallel start",
+    "e2e:ci": "pnpm run build",
+    "start:expose-all": "pnpm --filter federated-css-mono_expose-* --parallel start",
+    "start:react:css-styled-component": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/css-and-styled-component --parallel start",
+    "start:react:less-scss": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/less-and-scss --parallel start",
+    "start:react:css-module-and-jss": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/css-module-and-jss --parallel start",
+    "start:react:tailwind-global-and-less": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/tailwind-global-and-less --parallel start",
+    "start:react:tailwind-module-and-jss": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/tailwind-module-and-jss --parallel start",
+    "start:react:combination-of-5": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/combination-of-5 --parallel start",
+    "start:react:combination-of-4": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/combination-of-4 --parallel start",
+    "start:react:any-combination": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/any-combination --parallel start",
     "start:nextjs:combination-of-4": "pnpm --filter @federated-css/next-combination-of-4 --parallel start",
-    "start:nextjs:any-combination": "node ./consumers-nextjs/any-combination/execute.js && pnpm --filter @federated-css/next-any-combination --parallel start",
-    "start:nextjs:jss-tailwind-global": "pnpm --filter @federated-css/next-jss-and-tailwind-global --parallel start",
-    "start:nextjs:jss-css-and-tailwind-module": "pnpm --filter @federated-css/next-jss-css-and-tailwind-module --parallel start",
-    "start:nextjs:less-and-styled-component": "pnpm --filter @federated-css/next-less-and-styled-component --parallel start"
+    "start:nextjs:any-combination": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/next-any-combination --parallel start",
+    "start:nextjs:jss-tailwind-global": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/next-jss-and-tailwind-global --parallel start",
+    "start:nextjs:jss-css-and-tailwind-module": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/next-jss-css-and-tailwind-module --parallel start",
+    "start:nextjs:less-and-styled-component": "pnpm --filter federated-css-mono_expose-* --filter @federated-css/next-less-and-styled-component --parallel start"
   },
   "devDependencies": {}
 }
