--- a/federated-css/expose-remotes/expose-tailwind-css-global/package.json
+++ b/federated-css/expose-remotes/expose-tailwind-css-global/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
     "html-webpack-plugin": "5.6.0",
+    "postcss-loader": "^7.3.4",
     "serve": "14.2.1",
     "tailwindcss": "3.3.6",
     "webpack": "5.89.0",
