--- a/federated-css/expose-remotes/expose-tailwind-css-module/package.json
+++ b/federated-css/expose-remotes/expose-tailwind-css-module/package.json
@@ -2,6 +2,7 @@
   "name": "federated-css-mono_expose-tailwind-css-module",
   "version": "0.0.0",
   "devDependencies": {
+    "postcss-loader": "^7.3.4",
     "@babel/core": "7.23.7",
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
