--- a/federated-library-from-cdn/remoteLibrary/package.json
+++ b/federated-library-from-cdn/remoteLibrary/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.js",
+    "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
