Update scripts and dependencies in package.json files
In this commit, the scripts and dependencies within the package.json files of multiple applications and the remote library have been updated. The Webpack commands were replaced by rspack for the 'start' and 'build' scripts, while preserving the former as legacy options. New rspack related devDependencies were also added. The scripts on the root level package.json were updated to use pnpm, optimizing for a monorepo setup. Finally, the 'dev' script in the remoteLibrary was renamed to 'start'.

--- a/federated-library-from-cdn/package.json
+++ b/federated-library-from-cdn/package.json
@@ -10,7 +10,9 @@
   "version": "1.0.0",
   "scripts": {
     "build": "pnpm --filter federated-library-from-cdn-* --parallel build",
-    "start": "pnpm --filter federated-library-from-cdn-* --parallel start"
+    "legacy:build": "pnpm --filter federated-library-from-cdn-* --parallel legacy:build",
+    "start": "pnpm --filter federated-library-from-cdn-* --parallel start",
+    "legacy:start": "pnpm --filter federated-library-from-cdn-* --parallel legacy:start"
   },
   "devDependencies": {
     "concurrently": "^8.2.1"
